--- a/app/src/main/res/layout/cardview_weather.xml
+++ b/app/src/main/res/layout/cardview_weather.xml
@@ -1,46 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     card_view:cardBackgroundColor="@color/transparent"
-    android:layout_margin="@dimen/standard_margin"
     card_view:cardElevation="@dimen/card_no_elevation">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:background="@color/cyan1">
 
         <TextView
             android:id="@+id/text_view_card_details_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="@dimen/standard_margin"
             android:textColor="@color/white"
-            android:layout_marginTop="@dimen/standard_margin"/>
+            tools:text="Time" />
 
         <TextView
             android:id="@+id/text_view_card_details_weather"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            tools:text="2" />
 
         <ImageView
             android:id="@+id/image_view_card_details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/image_size"
+            android:layout_height="@dimen/image_size"
             android:layout_gravity="center"
-            android:src="@drawable/ic_sun"
-            android:layout_margin="@dimen/standard_margin"/>
+            android:layout_margin="@dimen/standard_margin"
+            android:src="@drawable/ic_sun" />
 
         <TextView
-            android:id="@+id/text_view_card_details_wind_speed"
-            android:layout_width="wrap_content"
+            android:id="@+id/text_view_card_details_icon_phrase"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/white" />
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            tools:text="Преимущественно ясно" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
