--- a/app/src/main/res/layout/fragment_weather_details.xml
+++ b/app/src/main/res/layout/fragment_weather_details.xml
@@ -35,126 +35,126 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/standard_margin"
             android:orientation="vertical">
+            <!--
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/linearLayout"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/standard_margin">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/standard_margin">
+                            <ProgressBar
+                                android:id="@+id/progressBar"
+                                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:progress="70"
+                                android:progressTint="@color/white"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
 
-                <ProgressBar
-                    android:id="@+id/progressBar"
-                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                            <TextView
+                                android:id="@+id/textView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/sunrise_example"
+                                android:textColor="@color/white"
+                                app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
+                                app:layout_constraintStart_toStartOf="@id/progressBar"
+                                app:layout_constraintTop_toBottomOf="@id/progressBar" />
+
+                            <TextView
+                                android:id="@+id/textView2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="@dimen/standard_margin"
+                                android:text="@string/sunset_example"
+                                android:textColor="@color/white"
+                                app:layout_constraintEnd_toEndOf="@id/progressBar"
+                                app:layout_constraintTop_toBottomOf="@id/progressBar" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+            -->
+                        <GridView
+                            android:id="@+id/grid_view_details"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:numColumns="2" />
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_view_details_three"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:progress="70"
-                    android:progressTint="@color/white"
+                    android:layout_margin="@dimen/standard_margin"
+                    android:padding="@dimen/standard_padding"
+                    app:cardBackgroundColor="@color/white_forty_percent_transparent"
+                    app:cardCornerRadius="@dimen/card_corner_radius"
+                    app:cardElevation="@dimen/card_no_elevation"
+                    app:layout_constraintBottom_toTopOf="@id/linear_layout_details_info_by"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@id/card_view_details_linear_two">
 
-                <TextView
-                    android:id="@+id/textView"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/standard_margin"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/cloud_cover"
+                            android:textColor="@color/white" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:src="@drawable/ic_cloud"
+                                android:contentDescription="@string/cloud_cover" />
+
+                            <TextView
+                                android:id="@+id/textview_details_cloud_cover"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:textColor="@color/white"
+                                android:textSize="@dimen/normal_text_size" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                    android:id="@+id/linear_layout_details_info_by"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/sunrise_example"
-                    android:textColor="@color/white"
-                    app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
-                    app:layout_constraintStart_toStartOf="@id/progressBar"
-                    app:layout_constraintTop_toBottomOf="@id/progressBar" />
+                    android:layout_margin="@dimen/standard_margin"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
 
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/standard_margin"
-                    android:text="@string/sunset_example"
-                    android:textColor="@color/white"
-                    app:layout_constraintEnd_toEndOf="@id/progressBar"
-                    app:layout_constraintTop_toBottomOf="@id/progressBar" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/standard_margin"
+                        android:text="@string/info_by"
+                        android:textColor="@color/white" />
+
+                    <ImageView
+                        android:layout_width="81dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/accuweather"
+                        android:contentDescription="@string/accuweather_logo" />
+                </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <GridView
-                android:id="@+id/grid_view_details"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:numColumns="2" />
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_view_details_three"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/standard_margin"
-        android:padding="@dimen/standard_padding"
-        app:cardBackgroundColor="@color/white_forty_percent_transparent"
-        app:cardCornerRadius="@dimen/card_corner_radius"
-        app:cardElevation="@dimen/card_no_elevation"
-        app:layout_constraintBottom_toTopOf="@id/linear_layout_details_info_by"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/card_view_details_linear_two">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/standard_margin"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/air_quality_index"
-                android:textColor="@color/white" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_wind"
-                    android:contentDescription="@string/air_quality_index" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/example_air_quality"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/normal_text_size" />
-            </LinearLayout>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-    <LinearLayout
-        android:id="@+id/linear_layout_details_info_by"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/standard_margin"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/standard_margin"
-            android:text="@string/info_by"
-            android:textColor="@color/white" />
-
-        <ImageView
-            android:layout_width="81dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/accuweather"
-            android:contentDescription="@string/accuweather_logo" />
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
