--- a/app/src/main/res/layout/fragment_weather_details.xml
+++ b/app/src/main/res/layout/fragment_weather_details.xml
@@ -122,6 +122,7 @@
                                 android:contentDescription="@string/cloud_cover" />
 
                             <TextView
+                                android:layout_marginStart="@dimen/little_margin"
                                 android:id="@+id/textview_details_cloud_cover"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
