--- a/app/src/main/res/layout/cell_grid_details_fragment_text_values.xml
+++ b/app/src/main/res/layout/cell_grid_details_fragment_text_values.xml
@@ -16,8 +16,8 @@
         android:id="@+id/text_view_details_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/standard_margin"
         android:textColor="@color/white"
         android:textSize="@dimen/normal_text_size"
-        android:textStyle="bold"
-        android:layout_marginBottom="@dimen/standard_margin"/>
+        android:textStyle="bold" />
 </LinearLayout>
