--- a/app/src/main/res/layout/fragment_weather_details.xml
+++ b/app/src/main/res/layout/fragment_weather_details.xml
@@ -15,7 +15,7 @@
         app:layout_constraintBottom_toTopOf="@id/card_view_details_linear_two"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view_details_linear_two"
@@ -74,88 +74,88 @@
                                 app:layout_constraintTop_toBottomOf="@id/progressBar" />
                         </androidx.constraintlayout.widget.ConstraintLayout>
             -->
-                        <GridView
-                            android:id="@+id/grid_view_details"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:numColumns="2" />
-                    </LinearLayout>
+            <GridView
+                android:id="@+id/grid_view_details"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numColumns="2" />
+        </LinearLayout>
 
-                </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/card_view_details_three"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/standard_margin"
-                    android:padding="@dimen/standard_padding"
-                    app:cardBackgroundColor="@color/white_forty_percent_transparent"
-                    app:cardCornerRadius="@dimen/card_corner_radius"
-                    app:cardElevation="@dimen/card_no_elevation"
-                    app:layout_constraintBottom_toTopOf="@id/linear_layout_details_info_by"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/card_view_details_linear_two">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view_details_three"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/standard_margin"
+        android:padding="@dimen/standard_padding"
+        app:cardBackgroundColor="@color/white_forty_percent_transparent"
+        app:cardCornerRadius="@dimen/card_corner_radius"
+        app:cardElevation="@dimen/card_no_elevation"
+        app:layout_constraintBottom_toTopOf="@id/linear_layout_details_info_by"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/card_view_details_linear_two">
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/standard_margin"
-                        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/standard_margin"
+            android:orientation="vertical">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/cloud_cover"
-                            android:textColor="@color/white" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/cloud_cover"
+                android:textColor="@color/white" />
 
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:src="@drawable/ic_cloud"
-                                android:contentDescription="@string/cloud_cover" />
-
-                            <TextView
-                                android:layout_marginStart="@dimen/little_margin"
-                                android:id="@+id/textview_details_cloud_cover"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:textColor="@color/white"
-                                android:textSize="@dimen/normal_text_size" />
-                        </LinearLayout>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <LinearLayout
-                    android:id="@+id/linear_layout_details_info_by"
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/standard_margin"
-                    android:orientation="horizontal"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent">
+                    android:layout_gravity="center"
+                    android:contentDescription="@string/cloud_cover"
+                    android:src="@drawable/ic_cloud" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="@dimen/standard_margin"
-                        android:text="@string/info_by"
-                        android:textColor="@color/white" />
+                <TextView
+                    android:id="@+id/textview_details_cloud_cover"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/little_margin"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/normal_text_size" />
+            </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-                    <ImageView
-                        android:layout_width="81dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:src="@drawable/accuweather"
-                        android:contentDescription="@string/accuweather_logo" />
-                </LinearLayout>
-            </androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/linear_layout_details_info_by"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/standard_margin"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/standard_margin"
+            android:text="@string/info_by"
+            android:textColor="@color/white" />
+
+        <ImageView
+            android:layout_width="81dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:contentDescription="@string/accuweather_logo"
+            android:src="@drawable/accuweather" />
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
